--- a/index.html
+++ b/index.html
@@ -1,42 +1,46 @@
-
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Exported Figma Design</title>
-  
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-<div class="node-1">
-<div class="rectangle-5-2"></div>
-<p class="text-3"><span class="text-white">Analog Tools in a Digital World</span></p>
-<div class="rectangle-9-4"></div>
-<img src="images/ellipse-1-5.svg" class="ellipse-1-5" alt="ellipse-1" />
-<img src="images/line-1-6.svg" class="line-1-6" alt="line-1" />
-<p class="text-7"><span class="text-white">search</span></p>
-<p class="text-8"><span class="text-black">Rotary Phone</span></p>
-<div class="rectangle-11-9"></div>
-<div class="rectangle-13-10"></div>
-<div class="rectangle-12-11"></div>
-<p class="text-12"><span class="text-black">Slow down and dial!
-
-Did you know that vintage rotary phones work with modern bluetooth devices? Simply plug the device into your rotary phone (or even a more modern home phone), connect it via bluetooth to your cellphone and soon all of your calls will be coming through the 1950s!
-
-Using a rotary phone adds a bit of mystery to your day. Who is calling? Your cousin, a telemarketer, Frank Sinatra? You have to answer to find out!
-
-Dialing numbers is not only a nice moment to slow down, it also stimulates your mind, and helps you remember the phone numbers of important people in your life.
-
-Learn more in this course!</span></p>
-<img src="images/dscf5634-13.png" class="dscf5634-13" alt="dscf5634" />
-<div class="frame-6-14">
-<p class="text-15"><span class="text-black">START LEARNING</span></p>
-</div>
-<p class="text-16"><span class="text-black">image</span></p>
-<img src="images/image-9-17.png" class="image-9-17" alt="image-9" />
-<img src="images/img_0707-18.png" class="img_0707-18" alt="img_0707" />
-</div>
-
-</body>
+  <form id="form" role="search">
+  <input type="search" id="query" name="q"
+   placeholder="Search..."
+   aria-label="Search through site content">
+  <button>Search</button>
+</form>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 </html>
+    <div class="homepage-desktop">
+      <div class="div">
+        <div class="overlap">
+          <p class="text-wrapper">Analog Tools in a Digital World</p>
+          <div class="overlap-group">
+            <div class="ellipse"></div>
+            <img class="line" src="https://c.animaapp.com/7ppTxyvu/img/line-1.svg" />
+            <div class="text-wrapper-2">search</div>
+          </div>
+<!DOCTYPE html> 
+<html lang="en"> 
+<head> 
+    <meta charset="UTF-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>Rotary Phone</title> 
+    <style> 
+        .move-down { 
+            margin-top: 300px; /* Adjust the value as needed */ 
+        } 
+    </style> 
+</head> 
+<body> 
+ 
+    <h1 class="move-down" style="text-align: center;">Rotary Phone</h1> 
+<p>Did you know that vintage rotary phones work with modern bluetooth devices? Simply plug the device into your rotary phone (or even a more modern home phone), connect it via bluetooth to your cellphone and soon all of your calls will be coming through the 1950s! <p>
+
+<p> Using a rotary phone adds a bit of mystery to your day. Who is calling? Your cousin, a telemarketer, Frank Sinatra? You have to answer to find out!<p>
+
+<p>Dialing numbers is not only a nice moment to slow down, it also stimulates your mind, and helps you remember the phone numbers of important people in your life.<p>
+ 
+</body> 
+</html> 
+<img src="image.jpeg" alt="rotaryphone" class="center" width="300" height="300">
