--- a/index.html
+++ b/index.html
@@ -34,13 +34,15 @@
 </head> 
 <body> 
  
-    <h1 class="move-down" style="text-align: center;">Rotary Phone</h1> 
-<p>Did you know that vintage rotary phones work with modern bluetooth devices? Simply plug the device into your rotary phone (or even a more modern home phone), connect it via bluetooth to your cellphone and soon all of your calls will be coming through the 1950s! <p>
+    <h1 class="move-down" style="text-align: center;">Typewriter 101</h1> 
+<p>While typewriters may seem like ancient technology now, in the world of smart phones and laptops, there are many benefits that come from these machines.<p></p>
 
-<p> Using a rotary phone adds a bit of mystery to your day. Who is calling? Your cousin, a telemarketer, Frank Sinatra? You have to answer to find out!<p>
+<p>Typewriters are distraction free. There are no emails or social media platforms to take your mind away from what you are writing. You can work freely on a novel, or a journal entry, or poem, or even a grocery list, without any distractions.<p>
 
-<p>Dialing numbers is not only a nice moment to slow down, it also stimulates your mind, and helps you remember the phone numbers of important people in your life.<p>
+<p>Typewriters are also used as ways of creating art pieces with their large variety of fonts, and refurbishing them themselves is an exciting and interesting experience.<p>
+
+<p>But where does one begin? Where do you find a typewriter? And what do you do once you receive it?<p>
  
 </body> 
 </html> 
-<img src="image.jpeg" alt="rotaryphone" class="center" width="300" height="300">
+<img src="image.jpeg" alt="typewriter" class="center" width="300" height="300">
