--- a/index.html
+++ b/index.html
@@ -42,4 +42,4 @@
  
 </body> 
 </html> 
-<img src="image.jpeg" alt="typewriter" class="center" width="300" height="300">
+<img src="typewriter.JPG" alt="typewriter" class="center" width="300" height="300">
