--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head> 
 <body> 
  
-    <h1 class="move-down" style="text-align: center;">Typewriter 101</h1> 
+    <h1 class="move-down" style="text-align: class="text-wrapper-2"; center;">Typewriter 101</h1> 
 <p>While typewriters may seem like ancient technology now, in the world of smart phones and laptops, there are many benefits that come from these machines.<p></p>
 
 <p>Typewriters are distraction free. There are no emails or social media platforms to take your mind away from what you are writing. You can work freely on a novel, or a journal entry, or poem, or even a grocery list, without any distractions.<p>
