--- a/index.html
+++ b/index.html
@@ -37,3 +37,9 @@
 </body> 
 </html> 
 <img src="typewriter.JPG" alt="typewriter" class="center" width="300" height="300">
+ <div class="frame-wrapper">
+          <div class="frame">
+            <a href="https://hannah86uh.github.io/startlearning" target="_blank" rel="noopener noreferrer"
+              ><div class="text-wrapper-4">START LEARNING</div></a
+            >
+          </div>
