--- a/index.html
+++ b/index.html
@@ -43,3 +43,9 @@
               ><div class="text-wrapper-4">START LEARNING</div></a
             >
           </div>
+ <div class="frame-wrapper">
+          <div class="frame">
+            <a href="https://hannah86uh.github.io/startlearning" target="_blank" rel="noopener noreferrer"
+              ><div class="text-wrapper-4">START LEARNING</div></a
+            >
+          </div>
