--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <img src="typewriter.JPG" alt="typewriter" class="center" width="300" height="300">
  <div class="frame-wrapper">
           <div class="frame">
-            <a href="https://hannah86uh.github.io/startlearning" target="_blank" rel="noopener noreferrer"
-              ><div class="text-wrapper-4">START LEARNING</div></a
+            <a href="https://hannah86uh.github.io/finalproject/" target="_blank" rel="noopener noreferrer"
+              ><div class="text-wrapper-4">HOME</div></a
             >
           </div>
